# AI-RedEye-harness

./: .env.example  .gitattributes  .gitignore  .pre-commit-hooks.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  NOTICE  README.md  SECURITY.md  THIRD_PARTY_LICENSES.md  action.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  redeye-scan.yml
docs/: CI_AND_FEEDBACK.md  IMPROVEMENTS.md  IMPROVEMENT_RECOMMENDATIONS.md  REDEYE_DESIGN.md  REDUCING_HALLUCINATIONS.md  SETUP_GUIDE.md  SKILLS.md  USER_GUIDE.md  architecture.md  configuration.md  run_manifest.schema.json
inputs/: repos.example.csv
redeye/: __init__.py  __main__.py  abstention.py  ast_grounding.py  auto.py  baseline.py  cache.py  calibration.py  callgraph.py  cli.py  corroboration.py  errors.py  eval_harness.py  external.py  grounding.py  incremental.py  llm_cache.py  poc_oracle.py  precision.py  provenance.py  redaction.py  schema.py  scope.py  structural.py  threat_baseline.py
redeye/analysis/: __init__.py  cvss.py  sql_templates.py  taint.py
redeye/backends/: __init__.py  base.py  bedrock.py  cli_claude.py  mock.py  ollama.py  openai_compat.py  sdk_anthropic.py  vertex.py
redeye/commands/: __init__.py  baseline.py  collect_feedback.py  doctor.py  estimate.py  eval.py  init.py  presets.py  report.py  scan.py  setup.py  threat_baseline.py
redeye/config/: __init__.py  loader.py
redeye/enterprise/: __init__.py  loader.py  models.py
redeye/eval/: __init__.py
redeye/output/: html.py  (+8 more)
scripts/: build_capability_pdf.py  build_report_pdf.py  install_agents.py  md_to_pdf.py
tests/: conftest.py  test_auto.py  test_baseline.py  test_bedrock.py  test_calibration.py  test_callgraph.py  test_ci_integration_files.py  test_cli.py  test_config.py  test_corroboration.py  test_cost_guardrail.py  test_cvss.py  test_enterprise.py  test_eval_harness.py  test_external.py  test_feedback.py  test_grounding.py  test_incremental.py  test_init_wizard.py  test_intake_flags.py  test_model_ids.py  test_new_models.py  test_pipeline.py  test_poc_gate.py  test_poc_oracle.py  test_pr_comment.py  test_precision_helpers.py  test_presets.py  test_redaction.py  test_reports.py  test_scope.py  test_sql_templates.py  test_structural.py  test_taint.py  test_threat_baseline.py  test_threat_model.py  test_two_key.py  test_verification.py  test_verified_outputs.py  test_voting.py
(+47 files in other folders)
