[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "redeye"
version = "0.3.0"
description = "RedEye -- agentic SAST pipeline with PR-scan, feedback loop, multi-cloud LLM backends, and CI/CD integration."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
    { name = "RedEye contributors" }
]
keywords = ["security", "sast", "llm", "agentic", "vulnerability", "ai", "redteam", "appsec"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "click>=8.1",
    "pyyaml>=6.0",
    "rich>=13.0",
    "python-dotenv>=1.0",
    "pydantic>=2.5",
    "httpx>=0.27",
    "tenacity>=8.2",
]

[project.optional-dependencies]
sdk = [
    "anthropic>=0.40",
]
openai = [
    "openai>=1.40",
]
bedrock = [
    "boto3>=1.43.34",
]
vertex = [
    "google-cloud-aiplatform>=1.60",
    "google-auth>=2.30",
]
ollama = [
    # ollama uses plain HTTP; httpx (already in deps) is enough.
]
all = [
    "anthropic>=0.40",
    "openai>=1.40",
    "boto3>=1.43.34",
    "google-cloud-aiplatform>=1.60",
    "google-auth>=2.30",
]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.4",
    "mypy>=1.8",
]

[project.scripts]
redeye = "redeye.cli:main"

[project.urls]
Homepage = "https://github.com/example/redeye"
Documentation = "https://github.com/example/redeye/tree/main/docs"
Issues = "https://github.com/example/redeye/issues"

[tool.setuptools.packages.find]
include = ["redeye*"]
exclude = ["tests*"]

[tool.setuptools.package-data]
redeye = ["config/profiles/*.yaml", "skills/prompts/*.md"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra --strict-markers"
